# TrustRAG

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json
apps/web/: next.config.mjs  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/chat/: page.tsx
apps/web/app/knowledge-base/: page.tsx
apps/web/app/login/: page.tsx
docs/: API_CONTRACT.md  ARCHITECTURE.md  BUILD_PHASES.md  DATA_MODEL.md  EVALUATION_PLAN.md  PROJECT_SPEC.md  SECURITY_MODEL.md
services/api/: pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/api/v1/: __init__.py  documents.py  me.py  retrieval.py  router.py
services/api/app/core/: config.py
services/api/app/models/: __init__.py
services/api/app/schemas/: documents.py  health.py  membership.py  retrieval.py
services/api/app/services/: __init__.py  auth.py  documents.py  guardrails.py  retrieval.py
services/api/app/tests/: test_documents.py  test_health.py  test_me.py  test_retrieval.py
supabase/migrations/: 20260718000000_core_schema.sql
supabase/seed/: 20260720000000_demo_northstar_labs.sql
